<resources>
    <string name="app_name">PusherApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="navigation_root_communicate">Communicate</string>
    <string name="navigation_send_message">Send Message</string>
    <string name="action_settings">Settings</string>

    <string name="message">Write a message &#8230;</string>
    <string name="btn_login">Login</string>
    <string name="btn_send">Send</string>
    <string name="btn_send_to_server">Send to server side</string>
    <string name="lbl_net_status">Network Status</string>
    <string name="lbl_net_disconnect">DISCONNECTED</string>
    <string name="text_username">Username</string>
    <string name="text_password">Password</string>
</resources>
