<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_send"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:minHeight="?attr/actionBarSize"
        app:elevation="0dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:id="@+id/mainLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/txt_username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:hint="@string/text_username"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/txt_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:inputType="textPassword"
                android:maxLines="1"
                android:hint="@string/text_password"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_login"
                android:background="@drawable/bg_btn_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_login"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>




