<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.pribumitech.pusherapp.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:padding="16dp"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp">

            <TextView
                style="@android:style/TextAppearance.Medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/lbl_net_status" />

            <TextView
                android:id="@+id/net_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="@drawable/rect_red"
                android:text="@string/lbl_net_disconnect"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/mainLayoutBookmark"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal|center">

            <TextView
                android:id="@+id/txtMessagesArrive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="Messages"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/mainLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/txt_message"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:height="100dp"
                android:gravity="top"
                android:hint="@string/message"
                android:inputType="textMultiLine"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_send"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_btn_login"
                android:text="@string/btn_send"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <Button
                android:id="@+id/btn_send_server"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_btn_login"
                android:text="@string/btn_send_to_server"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <Button
                android:id="@+id/btn_service"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_btn_login"
                android:text="START"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:visibility="visible" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
